// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearPickerHeader Component YearPickerHeader renders handles changes 1`] = `
<div>
  <div>
    <div
      style="display: flex; justify-content: space-evenly;"
    >
      <button
        class="button"
        color="reversed"
        data-testid="TESTID-decreaseYear"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,chevron-left"
          />
        </div>
      </button>
      <button
        class="button"
        color="reversed"
        data-testid="TESTID-increaseYear"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,chevron-right"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`YearPickerHeader Component YearPickerHeader renders without data-testid 1`] = `
<div>
  <div>
    <div
      style="display: flex; justify-content: space-evenly;"
    >
      <button
        class="button"
        color="reversed"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,chevron-left"
          />
        </div>
      </button>
      <button
        class="button"
        color="reversed"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,chevron-right"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
